[package]
name = "menhera-reminder"
version = "0.0.0"
edition = "2021"

[dependencies]
dashmap = { version = "5.4.0", features = ["serde"] }
env_logger = "0.10.0"
mecab = "0.1.5"
rand = "0.8.5"
serde = { version = "1.0.150", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
toml = "0.5.10"
tracing = "0.1.37"
warp = { version = "0.3.3", features = ["tls"] }
